content framework for /article + custom scroll for articles section

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Nicholas Chibuike-Eruba | Software Developer and Tech
       Enthusiast</title>
-    <base href="/">
+    <base href=".">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Dosis"
       rel="stylesheet" />
